﻿LanExchange 3.1
===============
Main
[Fixed] LAN-1: Wrong current panel item for context menu of info panel
[Added] LAN-35: Shows cmdline in tooltip of item's context menu

Addons
[Added] User name in command "Send Email" for current user
[Changed] Addons format simplified
[Added] Ping command

LanExchange 2.0
===============
- Drag&Drop labels from info panel to external application
- Drag&Drop selected items to external application
- Copy column values of selected items to clipboard from context menu
- Optional command line parameter added for setting language /LANG:ll-cc
- Hot key for showing/hiding main form changed from 'Win+X' to 'Ctrl+Win+X' cause 'Win+X' used by Windows 8.
- Settings form removed
- License information in about box added.
- About form not modal now
- Default language is English.
- All logging code was removed.
- Autoupdater removed from about box.